2015-09-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.52 released.

2015-09-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.51 released.

2015-09-02  Carl Hetherington  <cth@carlh.net>

	* Switch to soxr resampler as it seems
	to have fewer artefacts in some cases (#682, possibly #493).

2015-09-02  c.hetherington  <cth@carlh.net>

	* Fix problems when changing the number
	of encoding servers / threads during an
	encode (#683).

2015-09-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.50 released.

2015-09-01  Carl Hetherington  <cth@carlh.net>

	* Allow cancellation of transcodes during the
	checking of existing frames (#679).

	* Version 2.1.49 released.

2015-08-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.48 released.

2015-08-31  Carl Hetherington  <cth@carlh.net>

	* Stop very long searches for subtitles where
	there are none.

	* Updated es_ES translation from Manuel AC.

2015-08-30  Carl Hetherington  <cth@carlh.net>

 	* Updated ru_RU translation from Igor Voytovich.

2015-08-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.47 released.

2015-08-28  c.hetherington  <cth@carlh.net>

	* Fix crash on adding a KDM to DCP content
	(hopefully fixing #645).

2015-08-27  Carl Hetherington  <cth@carlh.net>

	* Tidy up DCP content colour conversion
	a bit.

	* Fix creation of badly-named configuration
	directories in some circumstances (#654).

2015-08-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.46 released.

2015-08-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.45 released.

2015-08-25  Carl Hetherington  <cth@carlh.net>

	* Add video waveform viewer.

2015-08-23  Carl Hetherington  <cth@carlh.net>

	* Use correct fonts to render subtitles in preview (#663).

2015-08-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.44 released.

2015-08-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.43 released.

2015-08-20  Carl Hetherington  <cth@carlh.net>
